[package]
name = "kovi-plugin-gif-lab"
version = "0.1.3"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["araea"]
description = "Kovi 的 GIF 处理插件，支持合成、拆分、变速、倒放、旋转、拼图等操作。"
categories = ["multimedia::images", "asynchronous"]
repository = "https://github.com/araea/kovi-plugin-gif-lab"
keywords = ["kovi", "kovi-plugin", "gif", "image-processing", "onebot"]

[dependencies]
kovi = ">= 0.12"
anyhow = "1.0"
base64 = "0.22"
bytes = "1"
regex = "1"
serde_json = "1.0"
kovi-plugin-expand-napcat = "0.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
image = { version = "0.25", features = ["gif", "png", "jpeg"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
